# neumorphism

./: CMakeLists.txt  README.md
Example/: CMakeLists.txt
Example/example-1/: CMakeLists.txt
Example/example-2/: CMakeLists.txt
Example/example-3/: CMakeLists.txt
Example/example-4/: CMakeLists.txt
Example/example-5/: CMakeLists.txt  main.qml
Neumorphism/: BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  ComboBox.qml  Dial.qml  Frame.qml  HorizontalSeprator.qml  Label.qml  Neumorphism.pro  Neumorphism.qml  ProgressBar.qml  RadioButton.qml  RangeSlider.qml  Slider.qml  SpinBox.qml  SplitView.qml  StackView.qml  Switch.qml  TextArea.qml  TextField.qml  Tumbler.qml
Neumorphism/Base/: AdvancedRectangle.qml  BoxShadow.qml  DashedRect.qml  DashedRing.qml  FastShadow.qml  Handler.qml  NeumorphismRoundedRectangle.qml  RoundedInEffect.qml  RoundedOutEffect.qml
Neumorphism/Shaders/: advanced-rectangle.frag  box-shadow.frag  dashed-rectangle.frag  dashed-ring.frag  fast-shadow-blur-fragment.frag  fast-shadow-blur-vertext.vert  fast-shadow-weight.frag  round-in-effect.frag  round-out-effect.frag  round-out-shadow.frag
